footer css aligned correctly

--- a/src/home/footer.css
+++ b/src/home/footer.css
@@ -1,7 +1,7 @@
 .site-footer
 {
   background-color:#26272b;
-  padding:45px 0 20px;
+  padding:25px 0 20px;
   font-size:15px;
   line-height:24px;
   color:#737373;
@@ -70,7 +70,7 @@
 }
 .copyright-text
 {
-  margin:0
+  margin:30px
 }
 @media (max-width:991px)
 {
@@ -90,68 +90,7 @@
     text-align:center
   }
 }
-.social-icons
-{
-  padding-left:0;
-  margin-bottom:0;
-  list-style:none
-}
-.social-icons li
-{
-  display:inline-block;
-  margin-bottom:4px
-}
-.social-icons li.title
-{
-  margin-right:15px;
-  text-transform:uppercase;
-  color:#96a2b2;
-  font-weight:700;
-  font-size:13px
-}
-.social-icons a{
-  background-color:#eceeef;
-  color:#818a91;
-  font-size:16px;
-  display:inline-block;
-  line-height:44px;
-  width:44px;
-  height:44px;
-  text-align:center;
-  margin-right:8px;
-  border-radius:100%;
-  -webkit-transition:all .2s linear;
-  -o-transition:all .2s linear;
-  transition:all .2s linear
-}
-.social-icons a:active,.social-icons a:focus,.social-icons a:hover
-{
-  color:#fff;
-  background-color:#29aafe
-}
-.social-icons.size-sm a
-{
-  line-height:34px;
-  height:34px;
-  width:34px;
-  font-size:14px
-}
-.social-icons a.facebook:hover
-{
-  background-color:#3b5998
-}
-.social-icons a.twitter:hover
-{
-  background-color:#00aced
-}
-.social-icons a.linkedin:hover
-{
-  background-color:#007bb6
-}
-.social-icons a.dribbble:hover
-{
-  background-color:#ea4c89
-}
+
 @media (max-width:767px)
 {
   .social-icons li.title
@@ -160,4 +99,17 @@
     margin-right:0;
     font-weight:600
   }
+}
+footer table {
+  width: 100%; /* Set the table width to 100% of the parent container */
+  table-layout: fixed; /* Prevent automatic resizing of columns based on content */
+}
+
+footer td {
+  width: 33.33%; /* Set the width of each td to 33.33% of the table width */
+  padding:30px; /* Optional: Add padding to create space between content and cell border */
+  box-sizing: border-box; /* Optional: Include padding in the cell width calculation */
+}
+footer p {
+  text-align: justify;
 }
